--- a/017.html
+++ b/017.html
@@ -85,7 +85,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
 <span id="pro">广东省</span>:宏顺广告--G235--新田收费站--G1523甬莞高速--粤闽界；<br><hr>
-<span id="pro">福建省</span>:赣粤界--G45大广高速--南康南收费站
+<span id="pro">福建省</span>:闽粤界--G1523甬莞高速--东寨立交--S63古平高速--云霄火田收费站--G324--云霄吉泰水塔厂
 <br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">刘坤帅</div></li>
