--- a/009.html
+++ b/009.html
@@ -84,8 +84,8 @@
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">广东省</span>: 百合园--G234--海陵岛收费站--S51肇阳高速--阳江西立交--G15沈海高速--东坡岭立交--G75兰海高速--粤桂界；<br><hr>
-<span id="pro">广西壮族自治区</span>: 桂粤界--G75兰海高速--钦州港收费站<br><hr>
+<span id="pro">广东省</span>:春湾农产品批发市场--G359--二环路--S276--新兴收费站--G2518深岑高速--粤桂界；<br><hr>
+<span id="pro">广西壮族自治区</span>:桂粤界--G2518深岑高速--归义收费站<br><hr>
 </div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台伟驰货物运输有限公司</div></li>
