--- a/016.html
+++ b/016.html
@@ -84,7 +84,7 @@
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">河北省</span>: 廊坊味全食品有限公司—华夏南路--香河西收费站--G95首都环线高速- --冀京界；<br><hr>
+<span id="pro">河北省</span>: 廊坊味全食品有限公司--华夏南路--香河西收费站--G95首都环线高速- --冀京界；<br><hr>
 <span id="pro">北京市</span>: 京冀界--G95首都环线高速--京冀界；<br><hr>
 <span id="pro">河北省</span>: 冀京界--G95首都环线高速--G4京港澳高速--冀豫界；<br><hr>
 <span id="pro">河南省</span>:豫冀界--G4京港澳高速--安阳北收费站<br><hr></div></li>
