--- a/010.html
+++ b/010.html
@@ -85,7 +85,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
 <span id="pro">广西壮族自治区</span>:来宾东收费站--G72泉南高速--S52平那高速--G7212柳北高速--S40梧硕高速--G65包茂高速--G80广昆高速--桂粤界；<br><hr>
-<span id="pro">广东省</span>:粤桂界--G80广昆高速--S59怀郁高速--云浮东收费站--G324--田心石材市场<br><hr></div></li>
+<span id="pro">广东省</span>:粤桂界--G80广昆高速--云浮东收费站--G324--田心石材市场<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台润泽道路运输有限公司</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
