--- a/1.html
+++ b/1.html
@@ -40,20 +40,22 @@
 	<div class="mui-input-group">
 		<div class="small-title-class">基础信息</div>
 		<div class="mui-input-row " id="rowNo">	
-			<span class="title">许可证号：</span><span id="xkNo">A1500002024011123456【2类件】</span>
+			<span class="title">许可证号：</span><span id="xkNo">A1500002024042235456【2类件】</span>
 		</div>
 		<div class="mui-input-row ">	
-			<span class="title">有效范围：</span><span id="pass_dist_name">广东,湖南</span>
+			<span class="title">有效范围：</span><span id="pass_dist_name">广西,广东</span>
 		</div>
 		<div class="mui-input-row ">	
-			<span class="title">通行时间：</span><span id="pass_date">2024-01-17 15:04 至 2024-01-23 23:59</span>
+			<span class="title">通行时间：</span><span id="pass_date">2024-04-25 17:15 至 2024-04-30 23:59</span>
 		</div>
 		<div class="mui-input-row ">	
 			<span class="title">通行次数：</span><span id="txcs">单次</span>
 		</div>
 		<div class="mui-input-row ">	
 			<span class="title">通行路线：</span>
-			<div id="route-list">内蒙：海南收费站--G6京藏高速--蒙宁界<br>宁夏：宁蒙界--G6京藏高速-S10石平高速-G1816乌玛高速-大武口收费站-G110--石嘴山市实验中学</div>
+			<div id="route-list">
+广西：广西德信混凝土有限公司--G242--G325--南北二级公路--东环大道--迎宾大道--廉阳大道--G209--G325--G228--桂粤界<br>
+广东：粤桂界--G228--G207--遂溪大道--湛江大道--疏港大道--雷湖快线--工业大道--G207--进港公路--徐闻港</div>
 		</div>
 		<div class="mui-input-row ">	
 			<span class="title">承运单位：</span><span id="applicantName">邢台伟驰货物运输有限公司</span>
@@ -68,29 +70,33 @@
 		
 		<div class="small-title-class">货物信息</div>
 		<div class="mui-input-row ">	
-			<span class="title">货物名称：</span><span id="cargo_name">翻斗车一台</span>
+			<span class="title">货物名称：</span><span id="cargo_name">履带吊</span>
 		</div>
 		<div class="mui-input-row ">	
-			<span class="title">货物重量：</span><span id="cargo_weight">43.000吨</span>
+			<span class="title">货物重量：</span><span id="cargo_weight">54.690吨</span>
 		</div>
 		<div class="mui-input-row ">	
 			<span class="title">货物外廓尺寸(米)：</span><span id="cargo_out">12.00x3.75x3.60</span>
 		</div>
 		
 		<div class="small-title-class">车辆信息</div>
-		<div id="main_vehicle_div"><div class="mui-input-row "><span class="title">牵引车牌号：</span><span>冀EQ4882</span></div><div class="mui-input-row "><span class="title">厂牌型号：</span><span>解放牌CA4250P66K25TIE6</span></div><div class="mui-input-row "><span class="title">整备质量：</span><span>8.870吨</span></div></div>
+		<div id="main_vehicle_div"><div class="mui-input-row "><span class="title">牵引车牌号：</span><span>冀ET0452</span></div>
+<div class="mui-input-row "><span class="title">厂牌型号：</span><span>解放牌CA4250P66K24T1A1</span></div>
+<div class="mui-input-row "><span class="title">整备质量：</span><span>8.805吨</span></div></div>
 		
-		<div id="hang_vehicle_div"><div class="mui-input-row "><span class="title">挂车牌号：</span><span>冀ESE59挂</span></div><div class="mui-input-row "><span class="title">厂牌型号：</span><span>祥郓华旭牌NHY9403TDP</span></div><div class="mui-input-row "><span class="title">整备质量：</span><span>7.800吨</span></div></div>
+		<div id="hang_vehicle_div"><div class="mui-input-row "><span class="title">挂车牌号：</span><span>鲁HJ73D挂</span></div>
+<div class="mui-input-row "><span class="title">厂牌型号：</span><span>利源达牌LWY9386TDP</span></div>
+<div class="mui-input-row "><span class="title">整备质量：</span><span>8.500吨</span></div></div>
 		
 		<div class="small-title-class">车货总体信息</div>
 		<div class="mui-input-row ">	
-			<span class="title">车货总重量：</span><span id="total_weight">59.670吨</span>
+			<span class="title">车货总重量：</span><span id="total_weight">72.000吨</span>
 		</div>
 		<div class="mui-input-row ">	
-			<span class="title">车货外廓尺寸(米)：</span><span id="total_out">20.00x3.75x4.50</span>
+			<span class="title">车货外廓尺寸(米)：</span><span id="total_out">24.00x3.75x4.50</span>
 		</div>
 		<div class="mui-input-row ">	
-			<span class="title">轴荷分布：</span><span id="axles_load">10+20+30</span>
+			<span class="title">轴荷分布：</span><span id="axles_load">10+20+3*18</span>
 		</div>
 		<div class="mui-input-row " id="total_img">	
 			<span class="title">车货总体轮廓图：</span>
