--- a/3.html
+++ b/3.html
@@ -54,8 +54,8 @@
 		<div class="mui-input-row ">	
 			<span class="title">通行路线：</span>
 			<div id="route-list">
-福建：闽南农副产品物流中心--G324--翔安大道--翔安收费站--G15沈海高速--S15紫泥高速--G15沈海高速--闽粤界<br>
-广东：粤闽界--G15沈海高速--S85潮汕环线高速--登岗立交--G78汕昆高速--埔上立交--G1523甬莞高速--陆河东收费站--G235--亚立维修服务部</div>
+福建：漳州嘉年钢铁有限公司--G228--漳州招银港收费站--S59同招支线--S40漳武高速--G15沈海高速--闽粤界<br>
+广东：粤闽界--G15沈海高速--上北立交--S85潮汕环线高速--登岗立交--G78汕昆高速--埔上立交--G1523甬莞高速--陆河东收费站--G235--亚立维修服务部</div>
 		</div>
 		<div class="mui-input-row ">	
 			<span class="title">承运单位：</span><span id="applicantName">邢台伟驰货物运输有限公司</span>
