--- a/4.html
+++ b/4.html
@@ -40,13 +40,13 @@
 	<div class="mui-input-group">
 		<div class="small-title-class">基础信息</div>
 		<div class="mui-input-row " id="rowNo">	
-			<span class="title">许可证号：</span><span id="xkNo">A3500002024042523418【2类件】</span>
+			<span class="title">许可证号：</span><span id="xkNo">A4400002024042553397【2类件】</span>
 		</div>
 		<div class="mui-input-row ">	
-			<span class="title">有效范围：</span><span id="pass_dist_name">福建,广东</span>
+			<span class="title">有效范围：</span><span id="pass_dist_name">广东，广西</span>
 		</div>
 		<div class="mui-input-row ">	
-			<span class="title">通行时间：</span><span id="pass_date">2024-04-26 16:35 至 2024-05-10 23:59</span>
+			<span class="title">通行时间：</span><span id="pass_date">2024-04-26 17:35 至 2024-05-06 23:59</span>
 		</div>
 		<div class="mui-input-row ">	
 			<span class="title">通行次数：</span><span id="txcs">单次</span>
@@ -54,8 +54,8 @@
 		<div class="mui-input-row ">	
 			<span class="title">通行路线：</span>
 			<div id="route-list">
-福建：漳州嘉年钢铁有限公司--G228--漳州招银港收费站--S59同招支线--S40漳武高速--G15沈海高速--闽粤界<br>
-广东：粤闽界--G15沈海高速--上北立交--S85潮汕环线高速--登岗立交--G78汕昆高速--埔上立交--G1523甬莞高速--陆河东收费站--G235--亚立维修服务部</div>
+广东：广通水泥涵管预制厂--G228--茂名港大道--马踏收费站--G15沈海高速--黄羌立交--S61茂名港高速--丰垌立交--S14汕湛高速--仙塘立交--G65包茂高速--粤桂界<br>
+广西：桂粤界--G65包茂高速--梧州西收费站</div>
 		</div>
 		<div class="mui-input-row ">	
 			<span class="title">承运单位：</span><span id="applicantName">邢台伟驰货物运输有限公司</span>
@@ -73,27 +73,27 @@
 			<span class="title">货物名称：</span><span id="cargo_name">挖机</span>
 		</div>
 		<div class="mui-input-row ">	
-			<span class="title">货物重量：</span><span id="cargo_weight">42.700吨</span>
+			<span class="title">货物重量：</span><span id="cargo_weight">43.440吨</span>
 		</div>
 		<div class="mui-input-row ">	
 			<span class="title">货物外廓尺寸(米)：</span><span id="cargo_out">12.00x3.75x3.60</span>
 		</div>
 		
 		<div class="small-title-class">车辆信息</div>
-		<div id="main_vehicle_div"><div class="mui-input-row "><span class="title">牵引车牌号：</span><span>冀EQ1451</span></div>
+		<div id="main_vehicle_div"><div class="mui-input-row "><span class="title">牵引车牌号：</span><span>冀EQ1413</span></div>
 <div class="mui-input-row "><span class="title">厂牌型号：</span><span>解放牌CA4250P66K24T1A1</span></div>
 <div class="mui-input-row "><span class="title">整备质量：</span><span>8.805吨</span></div></div>
 		
 		<div id="hang_vehicle_div"><div class="mui-input-row "><span class="title">挂车牌号：</span><span>鲁H7KL3挂</span></div>
-<div class="mui-input-row "><span class="title">厂牌型号：</span><span>利源达牌LWY9386TDP</span></div>
-<div class="mui-input-row "><span class="title">整备质量：</span><span>8.500吨</span></div></div>
+<div class="mui-input-row "><span class="title">厂牌型号：</span><span>华骏牌ZCZ9400TDPHJE</span></div>
+<div class="mui-input-row "><span class="title">整备质量：</span><span>7.750吨</span></div></div>
 		
 		<div class="small-title-class">车货总体信息</div>
 		<div class="mui-input-row ">	
 			<span class="title">车货总重量：</span><span id="total_weight">60.000吨</span>
 		</div>
 		<div class="mui-input-row ">	
-			<span class="title">车货外廓尺寸(米)：</span><span id="total_out">24.00x3.75x4.50</span>
+			<span class="title">车货外廓尺寸(米)：</span><span id="total_out">22.00x3.75x4.50</span>
 		</div>
 		<div class="mui-input-row ">	
 			<span class="title">轴荷分布：</span><span id="axles_load">10+20+30</span>
