--- a/4.html
+++ b/4.html
@@ -84,7 +84,7 @@
 <div class="mui-input-row "><span class="title">厂牌型号：</span><span>解放牌CA4250P66K24T1A1</span></div>
 <div class="mui-input-row "><span class="title">整备质量：</span><span>8.805吨</span></div></div>
 		
-		<div id="hang_vehicle_div"><div class="mui-input-row "><span class="title">挂车牌号：</span><span>鲁H7KL3挂</span></div>
+		<div id="hang_vehicle_div"><div class="mui-input-row "><span class="title">挂车牌号：</span><span>冀EKL55挂</span></div>
 <div class="mui-input-row "><span class="title">厂牌型号：</span><span>华骏牌ZCZ9400TDPHJE</span></div>
 <div class="mui-input-row "><span class="title">整备质量：</span><span>7.750吨</span></div></div>
 		
