--- a/4.html
+++ b/4.html
@@ -54,8 +54,8 @@
 		<div class="mui-input-row ">	
 			<span class="title">通行路线：</span>
 			<div id="route-list">
-广东：广通水泥涵管预制厂--G228--茂名港大道--马踏收费站--G15沈海高速--黄羌立交--S61茂名港高速--丰垌立交--S14汕湛高速--仙塘立交--G65包茂高速--粤桂界<br>
-广西：桂粤界--G65包茂高速--梧州西收费站</div>
+广东：小洞工业区--G359--S362--荷城收费站--G9411莞佛高速--G15沈海高速--G55二广高速--G78汕昆高速--粤桂界<br>
+广西：桂粤界--G78汕昆高速--信都收费站</div>
 		</div>
 		<div class="mui-input-row ">	
 			<span class="title">承运单位：</span><span id="applicantName">邢台伟驰货物运输有限公司</span>
