--- a/002.html
+++ b/002.html
@@ -75,20 +75,20 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A4200002024041853397</div></li>
+                    <div class="detail-value " id="reqNo">A4200002024042653397</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">广东省,江西省</div></li>
+				<div class="detail-value " id="passDists">广东省,广西壮族自治区</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年04月19日17时35分至 2024年04月26日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2024年04月29日13时50分至 2024年05月10日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">广东省</span>: 新珠丰钢材--G105--马头收费站--G45大广高速--粤赣界；<br><hr>
-<span id="pro">江西省</span>: 赣粤界--G45大广高速--全南收费站<br><hr>
+<span id="pro">广东省</span>: 小洞工业区--G359--S362--荷城收费站--G9411莞佛高速--G15沈海高速--G55二广高速--G78汕昆高速--粤桂界；<br><hr>
+<span id="pro">广西壮族自治区</span>: 桂粤界--G78汕昆高速--信都收费站 <br><hr>
 </div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
-                    <div class="detail-value " id="certName">乔金友</div></li>
+                    <div class="detail-value " id="certName">邢台伟驰货物运输有限公司</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
                     <div class="detail-value " id="orgCertNo">130501302080</div></li>
                     
@@ -136,7 +136,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
 广东省：<br>交通部门意见:同意通行! <br>公安部门意见:暂无！<br><hr>
-江西省：<br>交通部门意见:同意通行! <br>公安部门意见:暂无！<br><hr>
+广西壮族自治区：<br>交通部门意见:同意通行! <br>公安部门意见:暂无！<br><hr>
 </div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
