--- a/003.html
+++ b/003.html
@@ -84,7 +84,7 @@
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">湖南省</span>:长沙西收费站--G5513长张高速--G0421许广高速--湘鄂界；<br><hr>
+<span id="pro">湖南省</span>:金洲收费站--G5513长张高速--G0421许广高速--湘鄂界；<br><hr>
 <span id="pro">湖北省</span>:鄂湘界--G0421许广高速--新沟收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
