--- a/006.html
+++ b/006.html
@@ -85,7 +85,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
 <span id="pro">江苏省</span>:湖西高新技术产业园--S253--苏鲁界；<br><hr>
-<span id="pro">山东省</span>:鲁苏界--S253--S318--G237--鱼台北收费站<br><hr></div></li>
+<span id="pro">山东省</span>:鲁苏界--S253--S318--G237--鱼台北收费站--S8济微高速--G1511日兰高速--G3京台高速--G2001济南绕城高速--G20青银高速--G2京沪高速--G2516东吕高速--G0111秦滨高速--滨港收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
