--- a/021.html
+++ b/021.html
@@ -84,7 +84,7 @@
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">广东省</span>:新亮五金--G236--龙川西收费站--G78汕昆高速--元善立交--G45大广高速--粤赣界；<br><hr>
+<span id="pro">广东省</span>:曾田中学--G205--灯塔收费站--G4511龙河高速--G78汕昆高速--G45大广高速--粤赣界；<br><hr>
 <span id="pro">江西省</span>:赣粤界--G45大广高速--全南收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
