--- a/002.html
+++ b/002.html
@@ -85,7 +85,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
 <span id="pro">山西省</span>: 晓飞汽修--和平西街--忻州收费站--G55二广高速--G1812沧榆高速--晋冀界；<br><hr>
-<span id="pro">河北省</span>: 冀晋界--G1812沧榆高速--阜平东收费站<br><hr>
+<span id="pro">河北省</span>: 冀晋界--G1812沧榆高速--阜平西收费站--G207--河北辰驰新型材料有限公司 <br><hr>
 </div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
