--- a/011.html
+++ b/011.html
@@ -84,7 +84,7 @@
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">广东省</span>:顺意石材--G235--水唇收费站--S19梅汕高速--G35济广高速--粤赣界；<br><hr>
+<span id="pro">广东省</span>:顺意石材--G235--陆河南收费站--G1523甬莞高速--章塘立交--S19梅汕高速--G35济广高速--粤赣界；<br><hr>
 <span id="pro">江西省</span>:赣粤界--G35济广高速--寻乌东收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">徐志诚</div></li>
