--- a/018.html
+++ b/018.html
@@ -105,7 +105,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">车辆信息</li> <!-- 车辆信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">牵引车车号牌：</div>
-                    <div class="detail-value" id="vehicleNo">冀EE2792Z</div></li>
+                    <div class="detail-value" id="vehicleNo">冀E2792Z</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">牵引车厂牌型号：</div>
                     <div class="detail-value" id="model">欧曼牌BJ4189SLFKA-AJ</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">牵引车整备质量：</div>
@@ -113,7 +113,7 @@
                 <li class="han-veh ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">挂车车号牌：</div>
                     <div class="detail-value" id="hanvehicleNo">冀E57CF挂</div></li>
                 <li class="han-veh ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">挂车厂牌型号：</div>
-                    <div class="detail-value" id="hanmodel">中航鸿盛牌HSY9352TDP</div></li>
+                    <div class="detail-value" id="hanmodel">利源达牌HSY9352TDP</div></li>
                 <li class="han-veh ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">挂车整备质量：</div>
                     <div class="detail-value " id="hanvehWeight">8.20吨</div></li>
                 
