--- a/017.html
+++ b/017.html
@@ -79,13 +79,13 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
 				<div class="detail-value " id="passDists">广西壮族自治区，广东省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年06月14日10时05分至 2024年06月30日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2024年06月14日18时05分至 2024年06月30日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">广西壮族自治区</span>:月生副食腊制品厂--G321--梧州东收费站--S4001梧州绕城高速高速--G6517省际高速--S8广佛肇高速--桂粤界；<br><hr>
-<span id="pro">广东省</span>:粤桂界--S8广佛肇高速--谷圩收费站--S266--两广石材交易市场<br><hr></div></li>
+<span id="pro">广西壮族自治区</span>:董力汽车修理厂--S323--岭脚收费站--G6517梧柳高速--S4001梧州绕城高速--S74信梧高速--G78汕昆高速--桂粤界；<br><hr>
+<span id="pro">广东省</span>:粤桂界--G78汕昆高速--冷坑收费站--X425--永森木场<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台越顺货物运输有限公司</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
