--- a/037.html
+++ b/037.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html class="ui-mobile"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><!--<base href="http://licwx.tpri.org.cn/zlwx/information.html?reqNo=A4400002019121800413&amp;status=52">--><base href=".">
-<title>全国大件运输许可查询系统</title>
+<title></title>
 <meta name="author" content="www.tpri.com">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1,maximum-scale=1, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
@@ -49,9 +49,6 @@
         <input id="status" type="hidden" value="52">
         <div data-role="header" data-position="fixed" data-theme="a" style="background-color: #18558D" role="banner" class="ui-header ui-bar-a ui-header-fixed slidedown">
         </div>       
-        <div style=" margin: 10px auto;border-top: 1px  black; position: relative; text-align: center;">
-            <span style="display:inline-block;  width:100%; border-top:2px solid #62b5de; vertical-align:5px; "></span>                
-        </div>
         <script type="text/javascript">
             $(document).ready(function() {
                 Information.loadInformationData();
