--- a/1.html
+++ b/1.html
@@ -40,13 +40,13 @@
 	<div class="mui-input-group">
 		<div class="small-title-class">基础信息</div>
 		<div class="mui-input-row " id="rowNo">	
-			<span class="title">许可证号：</span><span id="xkNo">A4500002024042235456【2类件】</span>
+			<span class="title">许可证号：</span><span id="xkNo">A4400002024061702062【2类件】</span>
 		</div>
 		<div class="mui-input-row ">	
-			<span class="title">有效范围：</span><span id="pass_dist_name">广西,广东</span>
+			<span class="title">有效范围：</span><span id="pass_dist_name">广东,江西</span>
 		</div>
 		<div class="mui-input-row ">	
-			<span class="title">通行时间：</span><span id="pass_date">2024-04-25 17:15 至 2024-04-30 23:59</span>
+			<span class="title">通行时间：</span><span id="pass_date">2024-06-18 16:20 至 2024-06-22 23:59</span>
 		</div>
 		<div class="mui-input-row ">	
 			<span class="title">通行次数：</span><span id="txcs">单次</span>
@@ -54,8 +54,8 @@
 		<div class="mui-input-row ">	
 			<span class="title">通行路线：</span>
 			<div id="route-list">
-广西：广西德信混凝土有限公司--G242--G325--南北二级公路--东环大道--迎宾大道--廉阳大道--G209--G325--G228--桂粤界<br>
-广东：粤桂界--G228--G207--遂溪大道--湛江大道--疏港大道--雷湖快线--工业大道--G207--进港公路--徐闻港</div>
+广东：东汽工贸有限公司--G205--G324--惠州东收费站--S6广龙高速--G35济广高速--粤赣界<br>
+江西：赣粤界--G35济广高速--南桥西收费站</div>
 		</div>
 		<div class="mui-input-row ">	
 			<span class="title">承运单位：</span><span id="applicantName">邢台伟驰货物运输有限公司</span>
@@ -70,10 +70,10 @@
 		
 		<div class="small-title-class">货物信息</div>
 		<div class="mui-input-row ">	
-			<span class="title">货物名称：</span><span id="cargo_name">履带吊</span>
+			<span class="title">货物名称：</span><span id="cargo_name">挖机</span>
 		</div>
 		<div class="mui-input-row ">	
-			<span class="title">货物重量：</span><span id="cargo_weight">54.690吨</span>
+			<span class="title">货物重量：</span><span id="cargo_weight">40.690吨</span>
 		</div>
 		<div class="mui-input-row ">	
 			<span class="title">货物外廓尺寸(米)：</span><span id="cargo_out">12.00x3.75x3.60</span>
@@ -90,13 +90,13 @@
 		
 		<div class="small-title-class">车货总体信息</div>
 		<div class="mui-input-row ">	
-			<span class="title">车货总重量：</span><span id="total_weight">72.000吨</span>
+			<span class="title">车货总重量：</span><span id="total_weight">58.000吨</span>
 		</div>
 		<div class="mui-input-row ">	
-			<span class="title">车货外廓尺寸(米)：</span><span id="total_out">24.00x3.75x4.50</span>
+			<span class="title">车货外廓尺寸(米)：</span><span id="total_out">25.00x3.75x4.50</span>
 		</div>
 		<div class="mui-input-row ">	
-			<span class="title">轴荷分布：</span><span id="axles_load">10+20+3*18</span>
+			<span class="title">轴荷分布：</span><span id="axles_load">10+20+30</span>
 		</div>
 		<div class="mui-input-row " id="total_img">	
 			<span class="title">车货总体轮廓图：</span>
@@ -116,7 +116,7 @@
 		
 	</div>
 	
-    <div id="tip" class="tip"><span id="tipMsg">当前有效</span></div>
+    <div id="tip" class="tip"><span id="tipMsg">此证失效</span></div>
     <script type="text/javascript" charset="utf-8">	
     
 	    $().ready(function() {
