--- a/005.html
+++ b/005.html
@@ -84,8 +84,8 @@
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">广东省</span>:中油bp增城石滩加油站--立新西路--朱石路--荔新公路--广园快速路--开发大道--连云路--东捷路--东勤路--石化路--科林路--珠吉路--汇彩北路--黄埔大道东--奥体收费站--S81广州环城高速--S15沈海高速广州支线--S4华南快速--S8广佛肇高速--S59怀郁高速--G80广昆高速--粤桂界<br><hr></div>
-<span id="pro">广西壮族自治区</span>:桂粤界--G80广昆高速--G65包茂高速--梧州西收费站；<br><hr></li>
+<span id="pro">广东省</span>:中油bp增城石滩加油站--立新西路--朱石路--荔新公路--广园快速路--开发大道--连云路--东捷路--东勤路--石化路--科林路--珠吉路--汇彩北路--黄埔大道东--奥体收费站--S81广州环城高速--S15沈海高速广州支线--S4华南快速--S8广佛肇高速--S59怀郁高速--G80广昆高速--粤桂界<br><hr>
+<span id="pro">广西壮族自治区</span>:桂粤界--G80广昆高速--G65包茂高速--梧州西收费站；<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">范琪宇</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
