--- a/6.html
+++ b/6.html
@@ -40,13 +40,13 @@
 	<div class="mui-input-group">
 		<div class="small-title-class">基础信息</div>
 		<div class="mui-input-row " id="rowNo">	
-			<span class="title">许可证号：</span><span id="xkNo">A4400002024061702062【2类件】</span>
+			<span class="title">许可证号：</span><span id="xkNo">A4400002024061701562【2类件】</span>
 		</div>
 		<div class="mui-input-row ">	
-			<span class="title">有效范围：</span><span id="pass_dist_name">广东,江西</span>
+			<span class="title">有效范围：</span><span id="pass_dist_name">广东,福建</span>
 		</div>
 		<div class="mui-input-row ">	
-			<span class="title">通行时间：</span><span id="pass_date">2024-06-19 10:20 至 2024-06-23 23:59</span>
+			<span class="title">通行时间：</span><span id="pass_date">2024-06-19 11:10 至 2024-06-23 23:59</span>
 		</div>
 		<div class="mui-input-row ">	
 			<span class="title">通行次数：</span><span id="txcs">单次</span>
@@ -54,8 +54,8 @@
 		<div class="mui-input-row ">	
 			<span class="title">通行路线：</span>
 			<div id="route-list">
-广东：东汽工贸有限公司--G205--G324--惠州东收费站--S6广龙高速--G35济广高速--粤赣界<br>
-江西：赣粤界--G35济广高速--南桥西收费站</div>
+广东：中标科创园--G228--S233--月浦收费站--G78汕昆高速--埔上立交--G1523甬莞高速--粤闽界<br>
+福建：闽粤界--G1523甬莞高速--平和三平收费站--G355--福建志艺木业有限公司</div>
 		</div>
 		<div class="mui-input-row ">	
 			<span class="title">承运单位：</span><span id="applicantName">邢台伟驰货物运输有限公司</span>
@@ -73,10 +73,10 @@
 			<span class="title">货物名称：</span><span id="cargo_name">挖机</span>
 		</div>
 		<div class="mui-input-row ">	
-			<span class="title">货物重量：</span><span id="cargo_weight">40.690吨</span>
+			<span class="title">货物重量：</span><span id="cargo_weight">52.690吨</span>
 		</div>
 		<div class="mui-input-row ">	
-			<span class="title">货物外廓尺寸(米)：</span><span id="cargo_out">12.00x3.75x3.60</span>
+			<span class="title">货物外廓尺寸(米)：</span><span id="cargo_out">13.00x3.75x3.60</span>
 		</div>
 		
 		<div class="small-title-class">车辆信息</div>
@@ -90,13 +90,13 @@
 		
 		<div class="small-title-class">车货总体信息</div>
 		<div class="mui-input-row ">	
-			<span class="title">车货总重量：</span><span id="total_weight">58.000吨</span>
+			<span class="title">车货总重量：</span><span id="total_weight">70.000吨</span>
 		</div>
 		<div class="mui-input-row ">	
 			<span class="title">车货外廓尺寸(米)：</span><span id="total_out">25.00x3.75x4.50</span>
 		</div>
 		<div class="mui-input-row ">	
-			<span class="title">轴荷分布：</span><span id="axles_load">10+20+30</span>
+			<span class="title">轴荷分布：</span><span id="axles_load">10+20+3*18</span>
 		</div>
 		<div class="mui-input-row " id="total_img">	
 			<span class="title">车货总体轮廓图：</span>
