--- a/8.html
+++ b/8.html
@@ -116,7 +116,7 @@
 		
 	</div>
 	
-    <div id="tip" class="tip"><span id="tipMsg">此证失效</span></div>
+    <div id="tip" class="tip"><span id="tipMsg">当前有效</span></div>
     <script type="text/javascript" charset="utf-8">	
     
 	    $().ready(function() {
