--- a/007.html
+++ b/007.html
@@ -84,7 +84,7 @@
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">湖北省</span>:双胞胎集团当阳养猪服务部--G348--当阳西收费站--G42沪蓉高速--G59呼北高速--S88岳宜高速--G55二广高速--鄂湘界；<br><hr>
+<span id="pro">湖北省</span>:双胞胎集团当阳养猪服务部--G348--当阳北收费站--G59呼北高速--S88岳宜高速--G55二广高速--鄂湘界；<br><hr>
 <span id="pro">湖南省</span>: 湘鄂界--G55二广高速--津市收费站<br><hr>
 </div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
