--- a/017.html
+++ b/017.html
@@ -84,9 +84,9 @@
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">贵州省</span>:石板收费站--S02遵义绕城高速--G56杭瑞高速--黔湘界；<br><hr>
-<span id="pro">湖南省</span>:湘黔界--G56杭瑞高速--S32玉新高速--S30江黔高速--G56杭瑞高速--G4京港澳高速--湘鄂界；<br><hr>
-<span id="pro">湖北省</span>:鄂湘界--G4京港澳高速--G0422武深高速--G4京港澳高速--G50沪渝高速--S31黄咸高速--禹王收费站<br><hr></div></li>
+<span id="pro">贵州省</span>:石板收费站--S02遵义绕城高速--G56杭瑞高速--S32玉新高速--S30江黔高速--G56杭瑞高速--黔湘界；<br><hr>
+<span id="pro">湖南省</span>:湘黔界--G56杭瑞高速--G4京港澳高速--湘鄂界；<br><hr>
+<span id="pro">湖北省</span>:鄂湘界--G4京港澳高速--G0422武深高速--G4京港澳高速--G50沪渝高速--S31鄂咸高速--S31黄咸高速--禹王收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台程玖汽车贸易有限公司</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
