--- a/001.html
+++ b/001.html
@@ -79,13 +79,13 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
 				<div class="detail-value " id="passDists">江西省,湖南省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年09月04日19时00分至 2024年09月30日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2024年09月04日19时05分至 2024年09月30日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">江西省</span>:樟树东收费站--S42东昌高速--G60沪昆高速--赣湘界；<br><hr>
-<span id="pro">湖南省</span>:湘赣界--G60沪昆高速--G0421许广高速--长沙西收费站<br><hr></div></li>
+<span id="pro">江西省</span>:中国药都樟树收费站--G60沪昆高速--赣湘界；<br><hr>
+<span id="pro">湖南省</span>:湘赣界--G60沪昆高速--岳塘收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">范式凯</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
