--- a/002.html
+++ b/002.html
@@ -85,7 +85,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
 <span id="pro">湖北省</span>: 华章修理厂--G220--阳新东收费站---S29麻阳高速---G56杭瑞高速---鄂赣界；<br><hr>
-<span id="pro">江西省</span>: 赣鄂界---G56杭瑞高--狮子收费站<br><hr>
+<span id="pro">江西省</span>: 赣鄂界---G56杭瑞高速--狮子收费站<br><hr>
 </div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
