--- a/019.html
+++ b/019.html
@@ -75,18 +75,17 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A6200002024091303687</div></li>
+                    <div class="detail-value " id="reqNo">A1300002024092903687</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">甘肃省,青海省，新疆维吾尔自治区</div></li>
+				<div class="detail-value " id="passDists">河北省，山东省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年09月14日18时42分至 2024年09月30日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2024年09月30日18时42分至 2024年10月15日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">甘肃省</span>:龙泉寺镇-S102-龙泉寺收费站-G30连霍高速-G6京藏高速-甘青界；<br><hr>
-<span id="pro">青海省</span>:青甘界-G6京藏高速-G0612西和高速-G6京藏高速-S2013茶德高速-S20德小高速-G315-老茫崖收费站-G0612西和高速-青新界；<br><hr>
-<span id="pro">新疆维吾尔自治区</span>:新青界-G0612西和高速-G3012吐和高速-疏勒收费站<br><hr></div></li>
+<span id="pro">河北省</span>:吕军汽修门市部-G308-新河南收费站-S072邢衡高速-G20青银高速-冀鲁界；<br><hr>
+<span id="pro">山东省</span>:鲁冀界-G20青银高速-S0101济南绕城二环高速-S6济潍高速-北海路收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台程玖汽车贸易有限公司</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -99,7 +98,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">泵车</div></li>
+                    <div class="detail-value " id="cargoInfo">挖机</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
                     <div class="detail-value " id="cargoWeight">42.63吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
@@ -135,9 +134,8 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
-甘肃省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
-青海省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
-新疆维吾尔自治区：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
+河北省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
+山东省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
